5 April 2007
+ Added translation functions.
+ Added German translation files.

2 April 2007
+ Removed page and volume links from titles.

Version 0.5.1
------------------------------------------------------------------------
6 March 2007
+ Added 'select option' to drop down menu on page listing (FR#1674326)

5 March 2007
+ Changed control panel icon
+ Updated created_user_id for converted pages
+ Requesting a restricted page forwards user to the login screen.

Version 0.5.0 (merged svn versions > 0.2.6)
------------------------------------------------------------------------
26 February 2007
+ Fixed reference problem occuring in PHP 4
+ Made volume and page titles linked

23 February 2007
+ Removed the links that let you move pages around. Changed to a
  single "sort" link that takes you to the overview page.

21 February 2007
+ Page count performed before offering page move options.

19 February 2007
+ Added translate functions

14 February 2007
+ Removed table format from edit form
+ Updated files: templates/forms/edit_page.tpl, templates/forms/edit.tpl

12 February 2007
+ Added ability to move pages
+ Added Feature ability
+ Indexed page and volume table
+ Added Feature permission
+ Fixed some bugs with admin options
+ Fixed submitting an empty command
+ Updated files: templates/featured.tpl, templates/header.tpl

2 February 2007
+ Moved a function out of Page getTpl for clarity
+ Added a page select with onchange function. Put it into the basic
  page layout
+ Added page summary information to page templates
+ Replaced an panic exit with an logged error and send to the
  errorPage
+ Updated files: templates/page/basic.tpl, templates/page/prev_next.tpl,
  templates/page/short_links.tpl templates/page/verbose_links.tpl,
  conf/error.php 

1 February 2007
+ Altered page templates to prevent float overlap (previous update
  takes care of copy)

31 January 2007
+ Added simple image page addition.

26 January 2007
+ Moved error defines into their own file