@@ -5,7 +5,7 @@
 <div class="padded">{CONTENT_LABEL}<br />{CONTENT}</div>
 <div class="padded">{TEMPLATE_LABEL}<br />{TEMPLATE} {FORCE_TEMPLATE} {FORCE_TEMPLATE_LABEL}</div>
 <!-- BEGIN image -->
-<div class="padded"><label>Image</label><div>{PAGE_IMAGE}</div></div>
+<div class="padded"><label>{IMAGE_LABEL}</label><div>{PAGE_IMAGE}</div></div>
 <!-- END image -->
 </div>
 {SUBMIT}  
